--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <h2 class="text-center">Student Enrolment Form</h2>
+        <h2 class="text-center">Student Enrollment Form</h2>
         <form id="studentEnrollmentForm">
             <div class="form-group">
                 <label for="studentRoll">Roll Number:</label>
